--- a/WowCarLauncher/mobile/src/main/res/layout/plugin_device_launcher.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/plugin_device_launcher.xml
@@ -22,7 +22,6 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:src="@mipmap/icon_fangkong"
-                app:layout_heightPercent="100%h"
                 app:layout_widthPercent="100%h" />
 
             <com.zhy.android.percent.support.PercentLinearLayout
@@ -51,7 +50,6 @@
                     android:layout_weight="1"
                     android:gravity="center_vertical|left"
                     android:textColor="#f1f1f1"
-                    android:visibility="gone"
                     app:layout_textSizePercent="30%h" />
             </com.zhy.android.percent.support.PercentLinearLayout>
         </com.zhy.android.percent.support.PercentRelativeLayout>
@@ -63,7 +61,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
-        android:layout_weight="3"
+        android:layout_weight="4"
         android:background="@drawable/l_item_bg"
         android:orientation="vertical">
 
@@ -94,7 +92,8 @@
                     android:gravity="center_vertical|left"
                     android:paddingLeft="10dp"
                     android:text="OBD(未绑定)"
-                    android:textColor="#f1f1f1" />
+                    android:textColor="#f1f1f1"
+                    app:layout_textSizePercent="30%h" />
             </com.zhy.android.percent.support.PercentRelativeLayout>
         </FrameLayout>
 
@@ -102,7 +101,7 @@
         <com.zhy.android.percent.support.PercentLinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2"
+            android:layout_weight="3"
             android:orientation="vertical"
             android:paddingBottom="10dp"
             android:paddingLeft="10dp"
@@ -125,22 +124,24 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_zs"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_vertical|left"
                     android:text="转速:0"
                     android:textColor="#f1f1f1"
-                    app:layout_textSizePercent="60%h" />
+                    app:layout_textSizePercent="50%h" />
 
                 <TextView
+                    android:id="@+id/tv_cs"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_vertical|left"
                     android:text="车速:0"
                     android:textColor="#f1f1f1"
-                    app:layout_textSizePercent="60%h" />
+                    app:layout_textSizePercent="50%h" />
             </com.zhy.android.percent.support.PercentLinearLayout>
 
             <com.zhy.android.percent.support.PercentLinearLayout
@@ -150,25 +151,28 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_sw"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_vertical|left"
                     android:text="水温:0"
                     android:textColor="#f1f1f1"
-                    app:layout_textSizePercent="60%h" />
+                    app:layout_textSizePercent="50%h" />
 
                 <TextView
+                    android:id="@+id/tv_youliang"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_vertical|left"
                     android:text="油量:0"
                     android:textColor="#f1f1f1"
-                    app:layout_textSizePercent="60%h" />
+                    app:layout_textSizePercent="50%h" />
             </com.zhy.android.percent.support.PercentLinearLayout>
 
             <TextView
+                android:id="@+id/tv_tp_title"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
@@ -184,22 +188,24 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_tp_lf"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_vertical|left"
-                    android:text="左前:0"
+                    android:text="0/0℃"
                     android:textColor="#f1f1f1"
-                    app:layout_textSizePercent="60%h" />
+                    app:layout_textSizePercent="50%h" />
 
                 <TextView
+                    android:id="@+id/tv_tp_rf"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_vertical|left"
-                    android:text="右前:0"
+                    android:text="0/0℃"
                     android:textColor="#f1f1f1"
-                    app:layout_textSizePercent="60%h" />
+                    app:layout_textSizePercent="50%h" />
             </com.zhy.android.percent.support.PercentLinearLayout>
 
             <com.zhy.android.percent.support.PercentLinearLayout
@@ -209,22 +215,24 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_tp_lb"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_vertical|left"
-                    android:text="左后:0"
+                    android:text="0/0℃"
                     android:textColor="#f1f1f1"
-                    app:layout_textSizePercent="60%h" />
+                    app:layout_textSizePercent="50%h" />
 
                 <TextView
+                    android:id="@+id/tv_tp_rb"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center_vertical|left"
-                    android:text="右后:0"
+                    android:text="0/0℃"
                     android:textColor="#f1f1f1"
-                    app:layout_textSizePercent="60%h" />
+                    app:layout_textSizePercent="50%h" />
             </com.zhy.android.percent.support.PercentLinearLayout>
         </com.zhy.android.percent.support.PercentLinearLayout>
     </com.zhy.android.percent.support.PercentLinearLayout>
