--- a/WowCarLauncher/mobile/src/main/res/layout/plugin_amap_launcher.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/plugin_amap_launcher.xml
@@ -70,7 +70,7 @@
         </com.zhy.android.percent.support.PercentLinearLayout>
     </LinearLayout>
 
-    <LinearLayout
+    <com.zhy.android.percent.support.PercentLinearLayout
         android:id="@+id/ll_navi"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -91,7 +91,7 @@
             android:paddingRight="10dp"
             android:text="500米后 胶州路"
             android:textColor="#f1f1f1"
-            app:layout_textSizePercent="30%h" />
+            app:layout_textSizePercent="15%h" />
 
         <TextView
             android:id="@+id/tv_msg"
@@ -104,6 +104,6 @@
             android:paddingTop="5dp"
             android:text="剩余20公里"
             android:textColor="#f1f1f1"
-            app:layout_textSizePercent="30%h" />
-    </LinearLayout>
+            app:layout_textSizePercent="15%h" />
+    </com.zhy.android.percent.support.PercentLinearLayout>
 </com.zhy.android.percent.support.PercentRelativeLayout>
