no commit message

--- a/WowCarLauncher/mobile/src/main/res/layout/plugin_weather_launcher.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/plugin_weather_launcher.xml
@@ -67,7 +67,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="5dp"
             android:ellipsize="end"
-            android:gravity="left"
+            android:gravity="center"
             android:lines="1"
             android:textColor="#f1f1f1"
             app:layout_heightPercent="20%h"
@@ -80,7 +80,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="5dp"
             android:ellipsize="end"
-            android:gravity="left"
+            android:gravity="center"
             android:lines="1"
             android:textColor="#f1f1f1"
             app:layout_heightPercent="20%h"
