--- a/WowCarLauncher/mobile/src/main/res/layout/activity_lanncher.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/activity_lanncher.xml
@@ -28,22 +28,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
 
-                <com.zhy.android.percent.support.PercentLinearLayout
-                    android:id="@+id/ll_time"
+                <TextView
+                    android:id="@+id/tv_time"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginLeft="20dp"
-                    android:orientation="horizontal">
+                    android:gravity="center_vertical|end"
+                    android:textColor="#fff"
+                    app:layout_textSizePercent="40%h" />
 
-                    <TextView
-                        android:id="@+id/time"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical|end"
-                        android:textColor="#fff"
-                        app:layout_textSizePercent="60%h" />
-                </com.zhy.android.percent.support.PercentLinearLayout>
 
                 <!--<ImageView-->
                 <!--android:id="@+id/iv_set"-->
