--- a/WowCarLauncher/mobile/src/main/res/layout/plugin_music_launcher.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/plugin_music_launcher.xml
@@ -21,7 +21,7 @@
             android:layout_weight="1"
             android:contentDescription="@string/app_name"
             android:scaleType="fitCenter"
-            android:src="@mipmap/morenzhuanji"
+            android:src="@mipmap/ic_app_music"
             app:layout_heightPercent="60%h"
             app:layout_marginTopPercent="15%h"
             app:layout_widthPercent="60%h" />
